fixing note categorization and selection, generally cleaning and debugging

--- a/!part2_grammar_generation.ipynb
+++ b/!part2_grammar_generation.ipynb
@@ -106,34 +106,114 @@
    "outputs": [],
    "source": [
     "chord_dictionary = {\n",
-    "    \"major\": {\"C\": [0, 4, 7], \"L\": [2, 4, 6, 11]},\n",
-    "    \"minor\": {\"C\": [0, 4, 8], \"L\": [2, 3, 5, 7, 10]},\n",
-    "    \"augmented\": {\"C\": [0, 4, 8], \"L\": []},\n",
-    "    \"diminished\": {\"C\": [0, 3, 6] ,  \"L\": []},\n",
-    "    \"half-diminished\": {\"C\": [0, 3, 6, 10], \"L\": []},\n",
-    "    \"dominant-seventh\": {\"C\": [0, 4, 7, 10], \"L\": [] }\n",
+    "    \"major\": {\"C\": [0, 4, 7], \"L\": [2, 5, 9, 11]},\n",
+    "    \"minor\": {\"C\": [0, 3, 7], \"L\": [2, 5, 8, 10]},\n",
+    "#     \"augmented\": {\"C\": [0, 4, 8], \"L\": [2]},\n",
+    "    \"diminished\": {\"C\": [0, 3, 6, 9] ,  \"L\": [2]},\n",
+    "    \"half-diminished\": {\"C\": [0, 3, 6, 10], \"L\": [2]},\n",
+    "    \"dominant-seventh\": {\"C\": [0, 4, 7, 10], \"L\": [2, 5]}\n",
+    "}\n",
+    "\n",
+    "extension_dictionary = {\n",
+    "    \"major\": {2: 2, 4: 5, 5: 7, 6: 9, 7: 11, 9: 2, 11: 5},\n",
+    "    \"minor\": {2: 2, 4: 5, 5: 7, 6: 8, 7: 10, 9: 2, 11: 5}\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'A7', 'C7', 'D6', 'Dj7', 'E-7', 'Em7b5', 'F#-7', 'Fj7', 'Fo', 'G#m7b5', 'G-7'}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w = pd.read_csv('midi_to_csv/WebsterNight_chords.csv')\n",
+    "set(w['chord'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def find_chord_type(chord):\n",
+    "def find_chord_type(chord):    \n",
     "    if \"m7b5\" in chord:\n",
     "        return \"half-diminished\"\n",
     "    elif \"j7\" in chord:\n",
     "        return \"dominant-seventh\"\n",
+    "    elif \"-7\" in chord:\n",
+    "        return \"minor\" # TODO: figure out what this actually is\n",
     "    elif \"o\" in chord:\n",
     "        return \"diminished\"\n",
-    "    elif \"m\" in chord: \n",
+    "    elif \"m\" in chord:\n",
     "        return \"minor\"\n",
     "    else:\n",
     "        return \"major\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def find_chord_modifiers(chord, chord_type):\n",
+    "    '''\n",
+    "    Currently this is not-so-good code - fix pls\n",
+    "    '''\n",
+    "    if chord_type not in extension_dictionary or '-' in chord:\n",
+    "        return []\n",
+    "    root = get_root(chord)\n",
+    "    chord_desc = chord[len(root):]\n",
+    "    modifiers = [0]\n",
+    "    for c in chord_desc:\n",
+    "        if c == 'b' or c == '#':\n",
+    "            modifiers.append(c)\n",
+    "        else:\n",
+    "            offset = extension_dictionary[chord_type][int(c)]\n",
+    "            if modifiers[-1] == 'b':\n",
+    "                modifiers[-1] = offset - 1\n",
+    "            elif modifiers[-1] == '#':\n",
+    "                modifiers[-1] = offset + 1\n",
+    "            else:\n",
+    "                modifiers.append(offset)\n",
+    "    return modifiers[1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[11, 6]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chord = 'Eb7b5'\n",
+    "find_chord_modifiers(chord, find_chord_type(chord))"
    ]
   },
   {
@@ -147,18 +227,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def find_slope_bounds(lst):\n",
+    "    '''\n",
+    "    lst: list of full notes\n",
+    "    '''\n",
     "    max_jump, min_jump = 0, 0\n",
     "    for i in range(len(lst) - 1):\n",
     "        max_jump = max(max_jump, find_note_dist(lst[i], lst[i+1]))\n",
     "        min_jump = min(min_jump, find_note_dist(lst[i], lst[i+1]))\n",
-    "    return str(min_jump) + ' ' + str(max_jump)"
+    "    return min_jump, max_jump"
    ]
   },
   {
@@ -170,30 +253,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def categorize_note(note, chord, next_chord):\n",
-    "    root = chord[0]\n",
+    "def categorize_note(note, chord, next_note, modifiers=True, helpful=0.0):\n",
+    "    root = get_root(chord)\n",
     "    chord_type = find_chord_type(chord)\n",
     "    dist = find_note_dist(root, note, True)\n",
-    "    for chord_type, interval_list in chord_dictionary[chord_type].items():\n",
+    "    if modifiers and dist in find_chord_modifiers(chord, chord_type):\n",
+    "        return 'C'\n",
+    "    approach_flag = False\n",
+    "    for note_type, interval_list in chord_dictionary[chord_type].items():\n",
     "        if dist in interval_list:\n",
-    "            return chord_type\n",
-    "    if chord == next_chord:\n",
-    "        return \"X\"\n",
-    "    else:\n",
-    "        return \"A\""
+    "            if note_type in ['C', 'L'] and random.random() < helpful:\n",
+    "                return 'H'\n",
+    "            return note_type\n",
+    "        if (dist + 1) % 12 in interval_list or (dist - 1) % 12 in interval_list:\n",
+    "            approach_flag = True\n",
+    "    return 'A' if approach_flag else 'X'"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Generation of Expression String\n",
+    "### Generation of S-expression String\n",
     "S-expressions are in the form `\"min_slope max_slope note_string|start_time|duration ...\"`\n",
     "\n",
     "**This is the main function that will be used from this section (calls the other two functions above)**"
@@ -201,20 +288,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def create_s_exp(notes):\n",
-    "    # notes is list of tuples of (note_string, start_time, duration, chord, last_chord)\n",
-    "    s = ''\n",
+    "    # notes is list of tuples of (note_string, start_time, duration, chord)\n",
+    "    s_exp = ''\n",
     "    notes_only = []\n",
-    "    for note, start, duration, chord, last_chord in notes:\n",
-    "        s += categorize_note(note, chord, last_chord) + '|%.3f|%.3f '%(duration, start % 1)\n",
+    "    for i, (note, start, duration, chord) in enumerate(notes):\n",
+    "        next_note = notes[i + 1][0] if i != len(notes) - 1 else None\n",
+    "        s_exp += categorize_note(note, chord, next_note) + '|%.3f|%.3f '%(start % 1, duration)\n",
+    "        catcount[categorize_note(note, chord, next_note)] += 1\n",
     "        notes_only.append(note)\n",
-    "    return find_slope_bounds(notes_only) + ' ' + s"
+    "    return '%d %d '%find_slope_bounds(notes_only) + s_exp.strip()"
    ]
   },
   {
@@ -222,20 +311,33 @@
    "metadata": {},
    "source": [
     "## Featurizing S-expressions\n",
-    "We currently use 6 different functions to featurize our s-expressions."
+    "We currently use 6 different functions to featurize our s-expressions.\n",
+    "\n",
+    "### 1. Number of notes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "len = len # :P"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Location of the First Note\n",
+    "### 2. Location of the First Note\n",
     "The fraction of how far into the measure the first note starts."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -248,13 +350,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Total Duration of Rests\n",
+    "### 3. Total Duration of Rests\n",
     "$1 - \\sum\\limits_{note\\in measure} \\text{duration}(note)$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -267,13 +369,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Average Maximum Slope and Order of Contour\n",
+    "### 4/5. Average Maximum Slope and Order of Contour\n",
     "The average magnitude of each rising/falling run and how many times the slope changes direction, respectively."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -316,13 +418,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Consonance\n",
+    "### 6. Consonance\n",
     "Depends on the category of the notes - a higher value corresponds to more chord tones."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -330,9 +432,9 @@
    "source": [
     "def consonance(s_exp):\n",
     "    total = 0.0\n",
-    "    measure = s_exp.split(' ')[2:-1]\n",
+    "    measure = s_exp.split(' ')[2:]\n",
     "    \n",
-    "    weights = {'R': 0.1, 'C': 0.8, 'L': 0.4, 'X': 0.1, 'A': 0.6, 'H': 0.6}\n",
+    "    weights = {'C': 0.8, 'L': 0.4, 'H': 0.6, 'X': 0.1, 'A': 0.4}\n",
     "    for term in measure:\n",
     "        note_info = term.split('|')\n",
     "        note = note_info[0]\n",
@@ -352,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -378,15 +480,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def process_song(filename, s_exp, features):\n",
+    "def process_solo(filename, s_exp, features):\n",
     "    measure = 0\n",
-    "    last_chord = None\n",
     "    curr_s_exp = []\n",
     "    song = pd.read_csv('%s/%s'%(start_directory, filename))\n",
     "    for i in range(len(song)):\n",
@@ -399,9 +500,8 @@
     "            features = features.append(row_f, ignore_index=True)\n",
     "            curr_s_exp = []\n",
     "            measure = int(curr_note['start_time'])\n",
-    "        curr_s_exp.append((curr_note['note_name'], curr_note['start_time'], curr_note['duration'], curr_note['chord'], last_chord))\n",
-    "        last_chord = curr_note['chord']\n",
-    "    #tail of loop\n",
+    "        curr_s_exp.append((curr_note['note_name'], curr_note['start_time'], curr_note['duration'], curr_note['chord']))\n",
+    "    # TODO: try to not have this tail of loop - just repeat of chunk of for-loop\n",
     "    s = create_s_exp(curr_s_exp)\n",
     "    row_s = {'exp': s, 'song_id': song_num, 'song_index': measure}\n",
     "    s_exp = s_exp.append(row_s, ignore_index=True)\n",
@@ -420,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -434,10 +534,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
+   "source": [
+    "catcount = {'C': 0, 'L': 0, 'H': 0, 'A': 0, 'X': 0}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
    "outputs": [],
    "source": [
     "s_exp = pd.DataFrame(columns=['exp', 'song_id', 'song_index'])\n",
@@ -445,13 +554,42 @@
     "song_num = 0\n",
     "for filename in os.listdir(start_directory):\n",
     "    if filename.endswith('chords.csv'): # TODO: CHANGE THIS\n",
-    "        s_exp, features = process_song(filename, s_exp, features)\n",
+    "        s_exp, features = process_solo(filename, s_exp, features)\n",
     "        song_num += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'A': 116, 'C': 174, 'H': 0, 'L': 80, 'X': 5}"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "catcount"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = {'A': 116, 'C': 170, 'H': 0, 'L': 84, 'X': 5}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -483,31 +621,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0 4 A|0.155|0.125 X|0.725|0.290</td>\n",
+       "      <td>0 4 A|0.125|0.155 A|0.290|0.725</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0 0 L|0.340|0.678</td>\n",
+       "      <td>0 0 L|0.678|0.340</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>-3 0 A|0.174|0.036 X|0.164|0.255 C|0.195|0.443...</td>\n",
+       "      <td>-3 0 A|0.036|0.174 A|0.255|0.164 C|0.443|0.195...</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0 0 C|0.243|0.004</td>\n",
+       "      <td>0 0 C|0.004|0.243</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>-3 7 A|0.073|0.171 C|0.130|0.263 X|0.185|0.408...</td>\n",
+       "      <td>-3 7 A|0.171|0.073 C|0.263|0.130 X|0.408|0.185...</td>\n",
        "      <td>0</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
@@ -517,14 +655,14 @@
       ],
       "text/plain": [
        "                                                 exp song_id song_index\n",
-       "0                   0 4 A|0.155|0.125 X|0.725|0.290        0          0\n",
-       "1                                 0 0 L|0.340|0.678        0          1\n",
-       "2  -3 0 A|0.174|0.036 X|0.164|0.255 C|0.195|0.443...       0          2\n",
-       "3                                 0 0 C|0.243|0.004        0          3\n",
-       "4  -3 7 A|0.073|0.171 C|0.130|0.263 X|0.185|0.408...       0          4"
+       "0                    0 4 A|0.125|0.155 A|0.290|0.725       0          0\n",
+       "1                                  0 0 L|0.678|0.340       0          1\n",
+       "2  -3 0 A|0.036|0.174 A|0.255|0.164 C|0.443|0.195...       0          2\n",
+       "3                                  0 0 C|0.004|0.243       0          3\n",
+       "4  -3 7 A|0.171|0.073 C|0.263|0.130 X|0.408|0.185...       0          4"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +713,7 @@
        "      <td>0.584635</td>\n",
        "      <td>4.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.1040</td>\n",
+       "      <td>0.3520</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -584,7 +722,7 @@
        "      <td>-0.678385</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.2712</td>\n",
+       "      <td>0.1360</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -593,7 +731,7 @@
        "      <td>-11.315104</td>\n",
        "      <td>1.5</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1.0272</td>\n",
+       "      <td>0.5164</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -602,7 +740,7 @@
        "      <td>-2.003906</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0032</td>\n",
+       "      <td>0.1944</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -611,7 +749,7 @@
        "      <td>-31.157552</td>\n",
        "      <td>4.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>2.4775</td>\n",
+       "      <td>0.6173</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -619,14 +757,14 @@
       ],
       "text/plain": [
        "     0         1          2    3    4       5\n",
-       "0  2.0  0.125000   0.584635  4.0  0.0  0.1040\n",
-       "1  1.0  0.678385  -0.678385  0.0  0.0  0.2712\n",
-       "2  5.0  0.036458 -11.315104  1.5  1.0  1.0272\n",
-       "3  1.0  0.003906  -2.003906  0.0  0.0  0.0032\n",
-       "4  7.0  0.170573 -31.157552  4.0  2.0  2.4775"
+       "0  2.0  0.125000   0.584635  4.0  0.0  0.3520\n",
+       "1  1.0  0.678385  -0.678385  0.0  0.0  0.1360\n",
+       "2  5.0  0.036458 -11.315104  1.5  1.0  0.5164\n",
+       "3  1.0  0.003906  -2.003906  0.0  0.0  0.1944\n",
+       "4  7.0  0.170573 -31.157552  4.0  2.0  0.6173"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,14 +775,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "s_exp.to_csv('%s/s_exp.csv'%end_directory)\n",
-    "features.to_csv('$s/s_exp_features.csv'%end_directory)"
+    "features.to_csv('%s/s_exp_features.csv'%end_directory)"
    ]
   }
  ],
