fixed approach tone categorization (one version of it)

--- a/!part2_grammar_generation.ipynb
+++ b/!part2_grammar_generation.ipynb
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
@@ -176,15 +176,15 @@
     "    '''\n",
     "    Currently this is not-so-good code - fix pls\n",
     "    '''\n",
-    "    if chord_type not in extension_dictionary or '-' in chord:\n",
+    "    if chord_type not in extension_dictionary or '-' in chord: # bad bad\n",
     "        return []\n",
     "    root = get_root(chord)\n",
     "    chord_desc = chord[len(root):]\n",
     "    modifiers = [0]\n",
     "    for c in chord_desc:\n",
-    "        if c == 'b' or c == '#':\n",
+    "        if c in ['b', '#']:\n",
     "            modifiers.append(c)\n",
-    "        else:\n",
+    "        elif c != 'm':\n",
     "            offset = extension_dictionary[chord_type][int(c)]\n",
     "            if modifiers[-1] == 'b':\n",
     "                modifiers[-1] = offset - 1\n",
@@ -253,27 +253,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def categorize_note(note, chord, next_note, modifiers=True, helpful=0.0):\n",
+    "def categorize_note(note, chord, modifiers=True, helpful=0.0):\n",
     "    root = get_root(chord)\n",
     "    chord_type = find_chord_type(chord)\n",
     "    dist = find_note_dist(root, note, True)\n",
     "    if modifiers and dist in find_chord_modifiers(chord, chord_type):\n",
     "        return 'C'\n",
-    "    approach_flag = False\n",
+    "#     approach_flag = False\n",
     "    for note_type, interval_list in chord_dictionary[chord_type].items():\n",
     "        if dist in interval_list:\n",
     "            if note_type in ['C', 'L'] and random.random() < helpful:\n",
     "                return 'H'\n",
     "            return note_type\n",
-    "        if (dist + 1) % 12 in interval_list or (dist - 1) % 12 in interval_list:\n",
-    "            approach_flag = True\n",
-    "    return 'A' if approach_flag else 'X'"
+    "#         if (dist + 1) % 12 in interval_list or (dist - 1) % 12 in interval_list:\n",
+    "#             approach_flag = True\n",
+    "    return 'X'"
    ]
   },
   {
@@ -288,22 +288,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 67,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "# Not the prettiest...\n",
     "def create_s_exp(notes):\n",
     "    # notes is list of tuples of (note_string, start_time, duration, chord)\n",
     "    s_exp = ''\n",
-    "    notes_only = []\n",
+    "    notes_only = [chunk[0] for chunk in notes] # could probably just splice categories array\n",
+    "    categories = [categorize_note(chunk[0], chunk[3]) for chunk in notes]\n",
     "    for i, (note, start, duration, chord) in enumerate(notes):\n",
-    "        next_note = notes[i + 1][0] if i != len(notes) - 1 else None\n",
-    "        s_exp += categorize_note(note, chord, next_note) + '|%.3f|%.3f '%(start % 1, duration)\n",
-    "        catcount[categorize_note(note, chord, next_note)] += 1\n",
-    "        notes_only.append(note)\n",
+    "        category = categories[i]\n",
+    "        if i < len(notes) - 1 and category == 'X' and categories[i + 1] in ['C', 'L'] \\\n",
+    "          and find_note_dist(notes_only[i], notes_only[i + 1]) in [-1, 1]:\n",
+    "            category = 'A'\n",
+    "        catcount[category] += 1\n",
+    "        s_exp += category + '|%.3f|%.3f '%(start % 1, duration)\n",
     "    return '%d %d '%find_slope_bounds(notes_only) + s_exp.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'-11 0 C|0.400|0.250 L|0.700|0.100'"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "create_s_exp([('Ab5', 2.4, .25, 'Fm'), ('A4', 2.7, .1, 'C')])"
    ]
   },
   {
@@ -313,12 +335,13 @@
     "## Featurizing S-expressions\n",
     "We currently use 6 different functions to featurize our s-expressions.\n",
     "\n",
-    "### 1. Number of notes"
+    "### 1. Number of Notes\n",
+    "Easy enough - take the length of the list of notes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -337,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -356,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -375,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -424,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -454,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -480,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -520,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -534,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 68,
    "metadata": {
     "collapsed": true
    },
@@ -545,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,16 +583,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'A': 116, 'C': 174, 'H': 0, 'L': 80, 'X': 5}"
+       "{'A': 21, 'C': 174, 'H': 0, 'L': 80, 'X': 100}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,8 +603,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "b = {'A': 63, 'C': 174, 'H': 0, 'L': 80, 'X': 58}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "a = {'A': 116, 'C': 170, 'H': 0, 'L': 84, 'X': 5}"
@@ -589,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +657,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0 4 A|0.125|0.155 A|0.290|0.725</td>\n",
+       "      <td>0 4 X|0.125|0.155 X|0.290|0.725</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -633,7 +669,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>-3 0 A|0.036|0.174 A|0.255|0.164 C|0.443|0.195...</td>\n",
+       "      <td>-3 0 X|0.036|0.174 A|0.255|0.164 C|0.443|0.195...</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
@@ -645,7 +681,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>-3 7 A|0.171|0.073 C|0.263|0.130 X|0.408|0.185...</td>\n",
+       "      <td>-3 7 A|0.171|0.073 C|0.263|0.130 A|0.408|0.185...</td>\n",
        "      <td>0</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
@@ -655,14 +691,14 @@
       ],
       "text/plain": [
        "                                                 exp song_id song_index\n",
-       "0                    0 4 A|0.125|0.155 A|0.290|0.725       0          0\n",
+       "0                    0 4 X|0.125|0.155 X|0.290|0.725       0          0\n",
        "1                                  0 0 L|0.678|0.340       0          1\n",
-       "2  -3 0 A|0.036|0.174 A|0.255|0.164 C|0.443|0.195...       0          2\n",
+       "2  -3 0 X|0.036|0.174 A|0.255|0.164 C|0.443|0.195...       0          2\n",
        "3                                  0 0 C|0.004|0.243       0          3\n",
-       "4  -3 7 A|0.171|0.073 C|0.263|0.130 X|0.408|0.185...       0          4"
+       "4  -3 7 A|0.171|0.073 C|0.263|0.130 A|0.408|0.185...       0          4"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
