approach temp fix for part3

--- a/!part3_modeling.ipynb
+++ b/!part3_modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -75,13 +75,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0 0 H|0.678|0.340</td>\n",
+       "      <td>0 0 L|0.678|0.340</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>-3 0 X|0.036|0.174 X|0.255|0.164 H|0.443|0.195...</td>\n",
+       "      <td>-3 0 X|0.036|0.174 X|0.255|0.164 C|0.443|0.195...</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
@@ -104,13 +104,13 @@
       "text/plain": [
        "                                                 exp  song_id  song_index\n",
        "0                    0 4 X|0.125|0.155 X|0.290|0.725        0           0\n",
-       "1                                  0 0 H|0.678|0.340        0           1\n",
-       "2  -3 0 X|0.036|0.174 X|0.255|0.164 H|0.443|0.195...        0           2\n",
+       "1                                  0 0 L|0.678|0.340        0           1\n",
+       "2  -3 0 X|0.036|0.174 X|0.255|0.164 C|0.443|0.195...        0           2\n",
        "3                                  0 0 C|0.004|0.243        0           3\n",
        "4  -3 7 X|0.171|0.073 C|0.263|0.130 X|0.408|0.185...        0           4"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
        "      <td>0.584635</td>\n",
        "      <td>4.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.1660</td>\n",
+       "      <td>0.0880</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -171,7 +171,7 @@
        "      <td>-0.678385</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.2712</td>\n",
+       "      <td>0.1360</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -180,7 +180,7 @@
        "      <td>-11.315104</td>\n",
        "      <td>1.5</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1.3704</td>\n",
+       "      <td>0.3913</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -189,7 +189,7 @@
        "      <td>-2.003906</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0032</td>\n",
+       "      <td>0.1944</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -198,7 +198,7 @@
        "      <td>-31.157552</td>\n",
        "      <td>4.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>2.7928</td>\n",
+       "      <td>0.5540</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -206,14 +206,14 @@
       ],
       "text/plain": [
        "     0         1          2    3    4       5\n",
-       "0  2.0  0.125000   0.584635  4.0  0.0  0.1660\n",
-       "1  1.0  0.678385  -0.678385  0.0  0.0  0.2712\n",
-       "2  5.0  0.036458 -11.315104  1.5  1.0  1.3704\n",
-       "3  1.0  0.003906  -2.003906  0.0  0.0  0.0032\n",
-       "4  7.0  0.170573 -31.157552  4.0  2.0  2.7928"
+       "0  2.0  0.125000   0.584635  4.0  0.0  0.0880\n",
+       "1  1.0  0.678385  -0.678385  0.0  0.0  0.1360\n",
+       "2  5.0  0.036458 -11.315104  1.5  1.0  0.3913\n",
+       "3  1.0  0.003906  -2.003906  0.0  0.0  0.1944\n",
+       "4  7.0  0.170573 -31.157552  4.0  2.0  0.5540"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
        "23"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -345,21 +345,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([11, 11, 21, 11,  3, 21, 21,  3,  7, 21, 10,  7, 21,  3,  7,  3,  9,\n",
-       "       15,  3,  7, 20, 14, 15, 10,  0,  0,  2, 15, 22, 20,  3, 15, 17,  3,\n",
-       "       14,  2, 14, 20, 17,  8,  3,  2,  8, 15, 17,  7, 17, 13, 14,  7, 14,\n",
-       "        5, 12, 12, 17, 12, 20,  1,  1, 22,  5,  5,  0,  2, 19, 10,  1, 13,\n",
-       "       10,  1,  8,  8,  6, 16, 17, 17, 10, 19, 17, 10,  5,  2,  9,  2, 18,\n",
-       "       18, 18, 12, 12, 12, 15,  4])"
+       "array([ 3,  3, 21,  3, 10, 21, 21, 10,  5, 21, 19,  5, 21, 10,  5, 10,  8,\n",
+       "        9, 10,  5, 20,  8,  9, 19,  0,  0, 12,  9, 15,  0, 10,  9, 17, 10,\n",
+       "       22, 12, 22, 20, 17, 18, 10, 12,  6,  9,  6,  5, 17, 13, 22,  5,  8,\n",
+       "        7,  2,  2,  6,  2, 20, 14, 14, 15,  7,  7,  0, 12,  1, 19, 14, 13,\n",
+       "       19, 16,  6,  6, 11,  1,  6, 17, 19,  1, 17, 19,  7, 12,  8, 12, 16,\n",
+       "       16, 16,  2,  2,  2,  9,  4])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -496,12 +496,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_notes_from_category(chord, category):\n",
-    "    if category == 'H':\n",
+    "    if category == 'H' and category == 'A':\n",
     "        category = random.choice(['C', 'L'])\n",
     "    possible_notes = []\n",
     "    root = get_root(chord) + '4'\n",
@@ -517,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -548,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -582,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -614,83 +616,97 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Db5</td>\n",
-       "      <td>0.357</td>\n",
-       "      <td>0.076</td>\n",
+       "      <td>Bb3</td>\n",
+       "      <td>0.148</td>\n",
+       "      <td>0.066</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>D5</td>\n",
-       "      <td>0.445</td>\n",
-       "      <td>0.126</td>\n",
+       "      <td>A3</td>\n",
+       "      <td>0.228</td>\n",
+       "      <td>0.151</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>E5</td>\n",
-       "      <td>0.616</td>\n",
-       "      <td>0.070</td>\n",
+       "      <td>Bb3</td>\n",
+       "      <td>0.398</td>\n",
+       "      <td>0.057</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>F5</td>\n",
-       "      <td>0.695</td>\n",
-       "      <td>0.270</td>\n",
+       "      <td>C4</td>\n",
+       "      <td>0.456</td>\n",
+       "      <td>0.145</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Gb5</td>\n",
-       "      <td>0.971</td>\n",
-       "      <td>0.202</td>\n",
+       "      <td>D4</td>\n",
+       "      <td>0.618</td>\n",
+       "      <td>0.169</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>Gb5</td>\n",
-       "      <td>1.055</td>\n",
-       "      <td>0.181</td>\n",
+       "      <td>B3</td>\n",
+       "      <td>0.849</td>\n",
+       "      <td>0.247</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>Gb5</td>\n",
-       "      <td>1.272</td>\n",
-       "      <td>0.161</td>\n",
+       "      <td>C4</td>\n",
+       "      <td>1.073</td>\n",
+       "      <td>0.171</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Gb5</td>\n",
-       "      <td>1.477</td>\n",
-       "      <td>0.154</td>\n",
+       "      <td>Gb4</td>\n",
+       "      <td>1.270</td>\n",
+       "      <td>0.060</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>Gb5</td>\n",
-       "      <td>1.693</td>\n",
-       "      <td>0.155</td>\n",
+       "      <td>Db4</td>\n",
+       "      <td>1.353</td>\n",
+       "      <td>0.159</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>Gb5</td>\n",
-       "      <td>1.898</td>\n",
-       "      <td>0.158</td>\n",
+       "      <td>C4</td>\n",
+       "      <td>1.525</td>\n",
+       "      <td>0.066</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>D4</td>\n",
+       "      <td>1.607</td>\n",
+       "      <td>0.173</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>D4</td>\n",
+       "      <td>1.793</td>\n",
+       "      <td>0.087</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  note_name  start_time duration\n",
-       "0       Db5       0.357    0.076\n",
-       "1        D5       0.445    0.126\n",
-       "2        E5       0.616    0.070\n",
-       "3        F5       0.695    0.270\n",
-       "4       Gb5       0.971    0.202\n",
-       "5       Gb5       1.055    0.181\n",
-       "6       Gb5       1.272    0.161\n",
-       "7       Gb5       1.477    0.154\n",
-       "8       Gb5       1.693    0.155\n",
-       "9       Gb5       1.898    0.158"
+       "   note_name  start_time duration\n",
+       "0        Bb3       0.148    0.066\n",
+       "1         A3       0.228    0.151\n",
+       "2        Bb3       0.398    0.057\n",
+       "3         C4       0.456    0.145\n",
+       "4         D4       0.618    0.169\n",
+       "5         B3       0.849    0.247\n",
+       "6         C4       1.073    0.171\n",
+       "7        Gb4       1.270    0.060\n",
+       "8        Db4       1.353    0.159\n",
+       "9         C4       1.525    0.066\n",
+       "10        D4       1.607    0.173\n",
+       "11        D4       1.793    0.087"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
